Closed Bug 242065 Opened 22 years ago Closed 22 years ago

"My Name" from account is ignored when email contains "special chars", full name extracted from email address

Categories

(MailNews Core :: Backend, defect)

x86
All
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: Martin.T.Kutschker, Assigned: ch.ey)

Details

(Whiteboard: fixed-aviary1.0)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0.2) Gecko/20030208 Netscape/7.02 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0.2) Gecko/20030208 Netscape/7.02 Settings Your name: Martin T. Kutschker Email address: Martin-no$pam-Kutschker@blackbox.n0spam.net From: "Martin-no$pam-Kutschker" <"Martin-no$pam-Kutschker"@blackbox.n0spam.net> Reproducible: Always Steps to Reproduce: Post any message on a news server. Actual Results: From: "Martin-no$pam-Kutschker" <"Martin-no$pam-Kutschker"@blackbox.n0spam.net> Expected Results: From: "Martin T. Kutschker" <"Martin-no$pam-Kutschker"@blackbox.n0spam.net> Ok. the $ in the obfuscation address is fancy, but that's no excuse for ignoring "Your Name".
Martin, from your user agent, you are using Netscape Communicator, and not Mozilla. While Netscape is based on Mozilla, bugs in Netscape should be reported to them, and not here. See for example: http://channels.netscape.com/ns/browsers/faq.jsp#gen7 On how to report problems with Netscape. Your version is also rather old, so the problem may well be fixed in Netscape 7.1, or of course in Mozilla (go to www.mozilla.org to download). I'm afraid this will be marked INVALID
I've seen this also on Mozilla (at least 1.5) on Windows. So it is not a Netscape problem. I never noticed before until I tried those funky address.
Okay, I can reproduce this with a current ThunderBird build (20040426) on Win2k, but only if the e-mail address contains a $ (I guess other special chars as well). When the e-mail address is okay, "your name" is used. I suppose the bug desciption should be something like: Your name / real name is ignored when e-mail address contains special characters
Summary changed as per request of comment #3 in conformance with initial bug report.
Summary: "My Name" from account is ignored, full name extracted from email address → "My Name" from account is ignored when email contains "special chars", full name extracted from email address
Confirmed with Mozilla 20040401 on Win98.
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
Attached patch proposed patchSplinter Review
It happens to all addresses with a quoted local part, that is <"localpart"@domain.tld> (those addresses are allowed by RFC 2822). I tracked this down to construct_addresslist() and while a flag there is called "quoted", I think it refers to a quoted realname and doesn't know anything of quoted-string in the local-part. While I'm not fully understand the function and I couldn't test all possible variations to write an address, this patch should do it. It just disables collecting the displayname from within the addr-spec.
Assignee: sspitzer → ch.ey
Status: NEW → ASSIGNED
Who's best to have a look at this code? Scott, any idea?
Component: Networking: News → Mail Back End
that patch seems ok Christian. Certaiinly enough for us to try out and see how it works.
Ok, great. Feel free to tack your review on it and check it in if you like.
I checked this in. Let's see how it tests out. closing for now. will re-open if it breaks something
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Whiteboard: fixed-aviary1.0
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: