Bug #242065 --> "My Name" from account is ignored when email contains "special chars", full name extracted from email address

Patch by ch.ey@gmx.net

sr=mscott